--- a/pom.xml
+++ b/pom.xml
@@ -30,23 +30,25 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>3.3.5</version>
-				<extensions>true</extensions>
-				<configuration>
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.2.2-hf2</muleVersion>
-						<username>DestinyWins</username>
-						<password>DestinyWins</password>
-						<applicationName>sample-cicd-project</applicationName>
-						<environment>Sandbox</environment>
-						<workerType>MICRO</workerType>
-						<objectStoreV2>true</objectStoreV2>
-					</cloudHubDeployment>
-				</configuration>
-			</plugin>
+        <groupId>org.mule.tools.maven</groupId>
+        <artifactId>mule-maven-plugin</artifactId>
+        <version>3.3.2</version>
+        <extensions>true</extensions>
+        <configuration>
+        <cloudHubDeployment>
+          <uri>https://anypoint.mulesoft.com</uri>
+          <muleVersion>4.2.2</muleVersion>
+          <username>DestinyWins</username>
+          <password>DestinyWins1</password>
+          <applicationName>sample-cicd-project-soresa</applicationName>
+          <environment>Sandbox</environment>
+          <workerType>MICRO</workerType>
+          <properties>
+          <key>value</key>
+          </properties>
+        </cloudHubDeployment>
+        </configuration>
+      </plugin>
 
 		</plugins>
 	</build>
