--- a/pom.xml
+++ b/pom.xml
@@ -37,20 +37,18 @@
 				<configuration>
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>${app.runtime}</muleVersion>
-						<username>${username}</username>
-						<password>${password}</password>
-						<applicationName>${cloudhub.application.name}</applicationName>
-						<environment>${environment}</environment>
-						<workerType>${workerType}</workerType>
+						<muleVersion>4.2.2</muleVersion>
+						<username>DestinyWins</username>
+						<password>DestinyWins1</password>
+						<applicationName>sample-cicd-project</applicationName>
+						<environment>Sandbox</environment>
+						<workerType>MICRO</workerType>
 						<properties>
 							<key>value</key>
 						</properties>
 					</cloudHubDeployment>
 				</configuration>
 			</plugin>
-
-
 		</plugins>
 	</build>
 
